# footprintTradingBot

./: .gitignore  .gitmodules  README.md  doc.txt
dataPipeline/: CMakeLists.txt  CMakePresets.json
dataPipeline/libs/SQLAPI/: ReadMe.txt
dataPipeline/libs/SQLAPI/include/: SQLAPI.h  duckdbAPI.h  mdbAPI.h  myAPI.h  oledbAPI.h
dataPipeline/libs/SQLAPI/samples/: OLEDB_native.cpp  PostgreSQL_listen.cpp  bugtest.cpp  sqltest.cpp  sqltest_mvc.bat
dataPipeline/pythonTester/: create_sample_parquet.py  main.py  parquetToSqlite.py
dataPipeline/src/: main.cpp
dataProcessing/: .env  CMakeLists.txt  README.md  convertDatesToWeek.cpp  convertDatesToWeek.h  dataStructure.h  finalProcessing.cpp  initializeContract.cpp  initializeNewDay.cpp  main.cpp
dataProcessing/database/: json_writer.cpp  sqlite.cpp
dataProcessing/python/: rsi_calculator.py
dataProcessing/src/: finalizeContract.cpp  finalizeLastBar.cpp  finalizeProcessingDay.cpp  finalizeWeek.cpp  initializeNewBar.cpp  initializeWeek.cpp  signalCheck.cpp  updateBarSensitiveFeatures.cpp  updateDaySensitiveFeatures.cpp  updateFootprint.cpp  updatePriceSensitiveFeatures.cpp  updateTickSensitiveFeatures.cpp  updateWeekSensitiveFeatures.cpp  updatefeatures.h
dataProcessing/src/TPO/: TPO.cpp  TPO.h  dayTPO.cpp  weekTPO.cpp
dataProcessing/src/indicators/: BBands.cpp  RSI.cpp  VWAP.cpp  cumDelta5barSlope.cpp  dayVWAP.cpp  deltaDivergence.cpp  deltaZscore.cpp  indicators.h  interactionReversal.cpp  weekVWAP.cpp
dataProcessing/test/: CMakeLists.txt  test_day_tpo.cpp  test_vwap.cpp  test_zscore.cpp  zscore_test
pythonChecker/: main.py
pythonManager/: main.py
training/: .gitignore  CMakeLists.txt  convertDatesToWeek.cpp  dataStructure.h  finalProcessing.cpp  initializeContract.cpp  main.cpp  requirements.txt  train.py
training/database/: database.h  json_writer.cpp  json_writer.h  parquet.cpp  parquet_writer.cpp  parquet_writer.h  parquet_writer_simple.cpp  sqlite.cpp
training/logs/SAC_1/: events.out.tfevents.1761943164.sarjil.901248.0
training/logs/SAC_2/: events.out.tfevents.1761943401.sarjil.902830.0
training/logs/SAC_3/: events.out.tfevents.1761943743.sarjil.905292.0
training/logs/SAC_4/: events.out.tfevents.1761943982.sarjil.906826.0
training/python/: contract.parquet  json_to_parquet.py  readParquet.py
training/src/: finalizeLastBar.cpp  finalizeProcessingDay.cpp  updateFootprint.cpp  updatePriceSensitiveFeatures.cpp  updatefeatures.h
training/test/: CMakeLists.txt  testForInitialization.cpp
training/trading_env/: environment.py
